--- a/compose.yaml
+++ b/compose.yaml
@@ -16,6 +16,7 @@ services:
       - DISPLAY=host.docker.internal:0
     privileged: true
     volumes:
+      - ./bin:/fresnel-dev/bin
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - $FRESNEL_EXCHANGE_DIR:/var/run/fresnel
