New prs tool, docker login init script

--- a/fresnel.env
+++ b/fresnel.env
@@ -1,8 +1,36 @@
-export FRESNEL_HOME=$( cd $(dirname $BASH_SOURCE) ; pwd )
-export FRESNEL_USER_ID=$(id -u)
-export FRESNEL_EXCHANGE_DIR=$FRESNEL_HOME/.fresnel-exchange
+# -*- sh -*-
 
 #
-# Set this to 'y' or 'n' to avoid prompts during start up.
+# The location of the Fresenl source containing this file.
+#
+export FRESNEL_HOME=$( cd $(dirname $BASH_SOURCE) ; pwd )
+
+
+#
+# The location of the Fresnel Exchange directory
+#
+export FRESNEL_EXCHANGE_DIR=$FRESNEL_HOME/.fresnel-exchange
+
+
+#
+# Your user ID on the host machine.
+#
+export FRESNEL_USER_ID=$(id -u)
+
+
+#
+# IANA timezone name to use in Fresnel, e.g. America/New_York
+# or 'automatic' to attempt determine the timezone of the
+# host machine.
+#
+# See https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+#
+#
+export FRESNEL_TIMEZONE=automatic
+
+
+#
+# Whether or not X should be launch when Fresnel is started.
+# Leave unset to prompt, otherwise set this to 'y' or 'n'
 #
 export FRESNEL_AUTO_START_X
