--- a/compose.yaml
+++ b/compose.yaml
@@ -5,16 +5,21 @@ services:
       context: .
       dockerfile: fresnel.Dockerfile
       args:
-        FRESNEL_USER_ID: $FRESNEL_USER_ID
-        INSTALL_X_TOOLS: ${INSTALL_X_TOOLS:-false}
+        - FRESNEL_USER_ID=$FRESNEL_USER_ID
+        - FRESNEL_TIMEZONE=$FRESNEL_TIMEZONE
+        - INSTALL_X_TOOLS=${INSTALL_X_TOOLS:-false}
     hostname: fresnel
     user: dev
     working_dir: /home/dev
+    network_mode: bridge
     environment:
+      - USER=dev
       - TERM
       - GIT_CEILING_DIRECTORIES=/va:/home/dev
       - DISPLAY=host.docker.internal:0
     privileged: true
+    ports:
+      - "2001" # Socks tunnel
     volumes:
       - ./bin:/fresnel-dev/bin
       - /var/run/docker.sock:/var/run/docker.sock
