--- a/compose.yaml
+++ b/compose.yaml
@@ -27,7 +27,7 @@ services:
       - "8095:8095" # vista-fhir-query
       - "9090:9090" # mock-mpi
     volumes:
-      - ./bin:/fresnel-dev/bin
+      - .:/fresnel-dev
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - $FRESNEL_EXCHANGE_DIR:/var/run/fresnel
