--- a/fresnel.env
+++ b/fresnel.env
@@ -7,7 +7,7 @@ export FRESNEL_HOME=$( cd $(dirname $BASH_SOURCE) ; pwd )
 
 
 #
-# The location of the Fresnel Exchange directory
+# The location of the Fresnel Exchange directory.
 #
 export FRESNEL_EXCHANGE_DIR=$FRESNEL_HOME/.fresnel-exchange
 
@@ -16,6 +16,13 @@ export FRESNEL_EXCHANGE_DIR=$FRESNEL_HOME/.fresnel-exchange
 # Your user ID on the host machine.
 #
 export FRESNEL_USER_ID=$(id -u)
+
+
+#
+# The location of your GitHub repositories. This will
+# be mapped to /va inside of Fresnel
+#
+export FRESNEL_GITHUB_REPO_DIR=$HOME/va
 
 
 #
