--- a/compose.yaml
+++ b/compose.yaml
@@ -20,6 +20,7 @@ services:
     privileged: true
     ports:
       - "2002:2002" # HTTP proxy over socks tunnel
+      - "8000:8000" # Remote debugging
       - "8040:8040" # mpi-fhir-query
       - "8050:8050" # charon
       - "8070:8070" # cerner-fhir-query
