- System update is now a separate layer to speed up rebuilding - X Quartz is now started by default if available - Talisman initialization script is now provided

--- a/fresnel.env
+++ b/fresnel.env
@@ -40,4 +40,4 @@ export FRESNEL_TIMEZONE=automatic
 # Whether or not X should be launch when Fresnel is started.
 # Leave unset to prompt, otherwise set this to 'y' or 'n'
 #
-export FRESNEL_AUTO_START_X
+export FRESNEL_AUTO_START_X=y
