--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,7 @@ services:
     network_mode: bridge
     environment:
       - USER=dev
+      - HOST_USER=$USER
       - TERM
       - GIT_CEILING_DIRECTORIES=/va:/home/dev
       - DISPLAY=host.docker.internal:0
