docker compose no longer used to launch fresnel

--- a/fresnel.env
+++ b/fresnel.env
@@ -5,7 +5,6 @@
 #
 export FRESNEL_HOME=$( cd $(dirname $BASH_SOURCE) ; pwd )
 
-
 #
 # Your user ID on the host machine.
 #
@@ -29,3 +28,22 @@ export FRESNEL_GITHUB_REPO_DIR=$HOME/va
 #
 export FRESNEL_TIMEZONE=automatic
 
+
+#
+# Ports fresnel will publish by default.
+#
+export FRESNEL_DEFAULT_PORTS=(
+  "2222:22"   # SSH
+  "2002:2002" # HTTP proxy over socks tunnel
+  "8000:8000" # Remote debugging
+  "8040:8040" # mpi-fhir-query
+  "8050:8050" # charon
+  "8070:8070" # cerner-fhir-query
+  "8090:8090" # data-query
+  "8095:8095" # vista-fhir-query
+  "8888:8888" # yanartas
+  "9090:9090" # mock-mpi
+  "9001:9001" # whatever
+  "9002:9002" # whatever
+  "9003:9003" # whatever
+)
