Local user option support and new kill options.

--- a/fresnel.conf
+++ b/fresnel.conf
@@ -1,6 +1,27 @@
 # -*- sh -*-
 
 #
+# The ID of the image, container, and hostname of the Fresnel instance to create, use, and destroy.
+# By default, the a single Fresnel instance is assumed. However, there may be circumstances
+# where it is desired to run multiple instances (e.g., testing)
+#
+# This environment variable can specified on the command line or user environment:
+#   $ FRESNEL_SESSION_ID=ftest ./fresnel-start
+#   $ FRESNEL_SESSION_ID=ftest ./fsh
+#
+: ${FRESNEL_SESSION_ID:=fresnel}
+
+
+#
+# Kill running Fresnel instance?
+# - yes      kill it with prejudice before starting a new instance
+# - no       abort starting a new instance
+# - prompt   ask what to do
+#
+: ${FRESNEL_KILL:=prompt}
+
+
+#
 # The location of the Fresenl source containing this file.
 #
 export FRESNEL_HOME=$( cd $(dirname $BASH_SOURCE) ; pwd )
@@ -47,3 +68,23 @@ export FRESNEL_DEFAULT_PORTS=(
   "9002:9002" # whatever
   "9003:9003" # whatever
 )
+
+
+#
+# The ports to expose. This value may be
+# - default   Use FRESNEL_DEFAULT_PORTS above
+# - none      Do not map any ports
+# - <list>    A space separated list of Docker ports to publish in <port-on-host>:<port-in-container> format
+#
+# This option can be specified at run time or in the user environment
+#   $ FRESNEL_PORTS="8443:443 8080:8080" ./fresnel-start
+#
+: ${FRESNEL_PORTS:=default}
+
+
+#
+# Custom configuration is loaded from the file specified by FRESNEL_CONF
+#
+if [ -n "${FRESNEL_CONF:-}" -a ! -f "$FRESNEL_CONF" ]; then echo "Configuration not found: $FRESNEL_CONF" > /dev/stderr; exit 1; fi
+: ${FRESNEL_CONF:=$HOME/.fresnel/local.conf}
+if [ -f "$FRESNEL_CONF" ]; then . $FRESNEL_CONF; fi
