Fixed FRESNEL_CONF not defined error

--- a/fresnel.conf
+++ b/fresnel.conf
@@ -85,6 +85,6 @@ export FRESNEL_DEFAULT_PORTS=(
 #
 # Custom configuration is loaded from the file specified by FRESNEL_CONF
 #
-if [ -n "${FRESNEL_CONF:-}" -a ! -f "$FRESNEL_CONF" ]; then echo "Configuration not found: $FRESNEL_CONF" > /dev/stderr; exit 1; fi
+if [ -n "${FRESNEL_CONF:-}" ] && [ ! -f "${FRESNEL_CONF}" ]; then echo "Configuration not found: $FRESNEL_CONF" > /dev/stderr; exit 1; fi
 : ${FRESNEL_CONF:=$HOME/.fresnel/local.conf}
 if [ -f "$FRESNEL_CONF" ]; then . $FRESNEL_CONF; fi
