--- a/fresnel.conf
+++ b/fresnel.conf
@@ -22,6 +22,12 @@
 
 
 #
+# Automatical launch fsh after starting
+#
+: ${FRESNEL_FSH_ON_START:=true}
+
+
+#
 # The location of the Fresenl source containing this file.
 #
 export FRESNEL_HOME=$( cd $(dirname $BASH_SOURCE) ; pwd )
