--- a/fresnel.conf
+++ b/fresnel.conf
@@ -39,11 +39,21 @@ export FRESNEL_USER_ID=$(id -u)
 
 
 #
-# The location of your GitHub repositories. This will
+# The locations of your VA GitHub repositories. This will
 # be mapped to /va inside of Fresnel
 #
-export FRESNEL_GITHUB_REPO_DIR=$HOME/va
+export FRESNEL_VA_GITHUB_REPO_DIR=$HOME/va
 
+#
+# The locations of your BAH GitHub repositories. This will
+# be mapped to /va inside of Fresnel
+#
+export FRESNEL_BAH_GITHUB_REPO_DIR=$HOME/bah
+
+#
+# Optional Onedrive volume
+#
+export FRESNEL_ONEDRIVE_DIR=$HOME/Library/CloudStorage/OneDrive-BOOZALLENHAMILTON
 
 #
 # IANA timezone name to use in Fresnel, e.g. America/New_York
